//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String
  email String [unique]
  emailVerified DateTime
  phone String
  pickupAddress String
  finalPickupDate DateTime
  facebookProfileLink String
  image String
  hashedPassword String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  favoriteIds String[] [not null]
  accounts Account [not null]
  reservation Reservation [not null]
  item Item [not null]
}

Table Account {
  id String [pk]
  provider String [not null]
  providerAccountId String [not null]
  type String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  referesh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Item {
  id String [pk]
  title String [not null]
  description String [not null]
  image String [not null]
  image2 String
  image3 String
  image4 String
  image5 String
  category String [not null]
  itemCount Int [not null]
  price Float [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  reservation Reservation
}

Table Reservation {
  id String [pk]
  userId String [not null]
  itemId String [unique, not null]
  pickupDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  item Item [not null]
}

Table Restaurant {
  id String [pk]
  business_id String [unique]
  name String [not null]
  address String
  city String
  state String
  postal_code String
  latitude Float
  longitude Float
  stars Float
  review_count Int
  is_open Int
  image String
  category String
  reviews Json
  category_array String[] [not null]
  results Json
  bikeParking Boolean
  outdoorSeating Boolean
  restaurantsReservations Boolean
  restaurantsPriceRange2 Int
  businessParking Json
  restaurantsAttire String
  restaurantsGoodForGroups Boolean
  wifi String
  ambience Json
  noiseLevel String
  caters Boolean
  restaurantsTakeOut Boolean
  goodForMeal Json
  goodForKids Boolean
  businessAcceptsCreditCards Boolean
  hasTV Boolean
  restaurantsDelivery Boolean
  alcohol String
  categories String
  hours Json
  serviceComments Json
  environmentComments Json
  foodQualityComments Json
  priceComments Json
  transportationComments Json
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Review {
  id String [pk]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Item.userId > User.id [delete: Cascade]

Ref: Reservation.userId > User.id [delete: Cascade]

Ref: Reservation.itemId - Item.id [delete: Cascade]